[package]
name = "easy-fs-fuse"
version = "0.1.0"
authors = ["Yifan Wu <shinbokuow@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
easy-fs = { path = "../easy-fs" }
rand = "0.10.0"

# [features]
# board_qemu = []
# board_k210 = []
